--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,7 @@
         "polymer": "1.4.0",
         "iron-elements": "1.0.9",
         "paper-elements": "1.0.7",
-        "page": "1.7.1",
-        "bootstrap": "4.0.0-alpha.2",
-        "jquery": "2.2.2"
+        "page": "1.7.1"
     }
 }
 
