Add server part of OAuth
- GET /auth/google/login and /oauth2callback both work
- Logins are recorded in the database
- Client cookies are set
- Add several submodules to support this

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "src/github.com/lib/pq"]
 	path = src/github.com/lib/pq
 	url = https://github.com/lib/pq
+[submodule "src/golang.org/x/oauth2"]
+	path = src/golang.org/x/oauth2
+	url = https://github.com/golang/oauth2
+[submodule "src/golang.org/x/net"]
+	path = src/golang.org/x/net
+	url = https://github.com/golang/net
+[submodule "src/google.golang.org/cloud"]
+	path = src/google.golang.org/cloud
+	url = https://github.com/GoogleCloudPlatform/gcloud-golang
