Add a license file and copyright notices to every file I wrote

--- a/src/config/config.go.example
+++ b/src/config/config.go.example
@@ -1,5 +1,8 @@
 /*
- * This is the config file for the site. It must be copied to
+ * Copyright (c) 2016, Randy Westlund. All rights reserved.
+ * This code is under the BSD-2-Clause license.
+ *
+ * This is the config file for the application. It must be copied to
  * src/config/config.go and modified.
  */
 package config
