--- a/config/config.go.example
+++ b/config/config.go.example
@@ -8,11 +8,11 @@
 package config
 
 /* Format: [address]:port, passed to http.ListenAndServe(). */
-var ListenAddress string = ":3000"
+var ListenAddress = ":3000"
 
 /* Paramaters for connecting to a local PostgreSQL database. */
-var DatabaseUserName string = "recipes"
-var DatabaseName string = "recipes"
+var DatabaseUserName = "recipes"
+var DatabaseName = "recipes"
 
 /*
  * The following variables are used in OAuth, and must be set to your
@@ -20,10 +20,10 @@ var DatabaseName string = "recipes"
  */
 
 /* Google OAuth client id. */
-var OAuthClientID string = your value here!
+var OAuthClientID = your value here!
 
 /* Google OAuth client secret. */
-var OAuthClientSecret string = your value here!
+var OAuthClientSecret = your value here!
 
 /* The hostname in the URL where this server can be found. */
-var LocalHostName string = "recipes.textplain.net"
+var LocalHostName = "recipes.textplain.net"
