--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,12 @@
     "name": "recipes",
     "private": true,
     "dependencies": {
-        "polymer": "1.6.0",
-        "iron-elements": "1.0.10",
-        "paper-elements": "1.0.7",
-        "polymer-responsive-dialog": "rwestlund/responsive-dialog#1.2.0",
-        "page": "1.7.1"
+        "polymer": "Polymer/polymer#1.9.1",
+        "iron-elements": "PolymerElements/iron-elements#1.0.10",
+        "paper-elements": "PolymerElements/paper-elements#1.0.7",
+        "app-route": "PolymerElements/app-route#1.0.1",
+        "app-layout": "PolymerElements/app-layout#1.0.1",
+        "polymer-responsive-dialog": "rwestlund/responsive-dialog#1.2.0"
     }
 }
 
