--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
         "polymer": "Polymer/polymer#1.9.1",
         "iron-elements": "PolymerElements/iron-elements#1.0.10",
         "paper-elements": "PolymerElements/paper-elements#1.0.7",
+        "neon-elements": "PolymerElements/neon-elements#1.0.0",
         "app-route": "PolymerElements/app-route#1.0.1",
         "app-layout": "PolymerElements/app-layout#1.0.1",
         "polymer-responsive-dialog": "rwestlund/responsive-dialog#1.2.0"
