--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,28 @@
     "name": "recipes",
     "private": true,
     "dependencies": {
-        "polymer": "Polymer/polymer#1.9.1",
-        "iron-elements": "PolymerElements/iron-elements#1.0.10",
-        "paper-elements": "PolymerElements/paper-elements#1.0.7",
-        "neon-elements": "PolymerElements/neon-elements#1.0.0",
-        "app-route": "PolymerElements/app-route#1.0.1",
-        "app-layout": "PolymerElements/app-layout#1.0.1",
-        "polymer-responsive-dialog": "rwestlund/responsive-dialog#1.2.0"
+        "app-layout": "PolymerElements/app-layout#2.0.1",
+        "app-route": "PolymerElements/app-route#2.0.2",
+        "iron-ajax": "PolymerElements/iron-ajax#2.0.5",
+        "iron-collapse": "PolymerElements/iron-collapse#2.0.0",
+        "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0.0",
+        "iron-icon": "PolymerElements/iron-icon#2.0.1",
+        "iron-icons": "PolymerElements/iron-icons#2.0.1",
+        "iron-pages": "PolymerElements/iron-pages#2.0.0",
+        "paper-button": "PolymerElements/paper-button#2.0.0",
+        "paper-dialog": "PolymerElements/paper-dialog#2.0.0",
+        "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#2.0.0",
+        "paper-fab": "PolymerElements/paper-fab#2.0.0",
+        "paper-icon-button": "PolymerElements/paper-icon-button#2.0.1",
+        "paper-input": "PolymerElements/paper-input#2.0.2",
+        "paper-item": "PolymerElements/paper-item#2.0.0",
+        "paper-listbox": "PolymerElements/paper-listbox#2.0.0",
+        "paper-spinner": "PolymerElements/paper-spinner#2.0.0",
+        "paper-styles": "PolymerElements/paper-styles#2.0.0",
+        "paper-toast": "PolymerElements/paper-toast#2.0.0",
+        "polymer": "Polymer/polymer#2.0.2",
+        "polymer-responsive-dialog": "rwestlund/responsive-dialog#2.0.0",
+        "web-animations-js": "web-animations/web-animations-js#2.3.1"
     }
 }
 
