--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@rwestlund/recipes",
     "private": true,
     "devDependencies": {
-        "polymer-cli": "1.7.1"
+        "polymer-cli": "1.7.2"
     },
     "dependencies": {
         "@polymer/app-layout": "^3.0.0-pre.1",
@@ -26,7 +26,7 @@
         "@polymer/paper-toast": "^3.0.0-pre.1",
         "@polymer/polymer": "^3.0.0-pre.1",
         "@rwestlund/responsive-dialog": "3.0.2",
-        "web-animations-js": "2.3.1",
-        "@webcomponents/webcomponentsjs": "2.0.0"
-  }
+        "@webcomponents/webcomponentsjs": "2.0.0",
+        "web-animations-js": "2.3.1"
+    }
 }
