--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
     "name": "@rwestlund/recipes",
     "private": true,
     "devDependencies": {
-        "polymer-cli": "1.9.11"
+        "@open-wc/building-rollup": "^1.10.0",
+        "rollup": "^2.52.6",
+        "rollup-plugin-cpy": "^2.0.1",
+        "rollup-plugin-progress": "^1.1.2"
     },
     "dependencies": {
         "@polymer/app-layout": "3.1.0",
