Remove all client-side stuff, switch to react + webpack
This commit adds a manually-build build config and hello world react
app.

--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
     "name": "@rwestlund/recipes",
     "private": true,
+    "scripts": {
+        "dev": "webpack serve --mode=development",
+        "build": "webpack --mode=production",
+        "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\""
+    },
     "devDependencies": {
-        "@open-wc/building-rollup": "^1.10.0",
-        "rollup": "^2.52.6",
-        "rollup-plugin-cpy": "^2.0.1",
-        "rollup-plugin-progress": "^1.1.2"
+        "@babel/core": "^7.14.6",
+        "@babel/eslint-parser": "^7.14.7",
+        "@babel/preset-env": "^7.14.7",
+        "@babel/preset-react": "^7.14.5",
+        "@babel/preset-typescript": "^7.14.5",
+        "@types/react": "^17.0.13",
+        "@types/react-dom": "^17.0.8",
+        "@types/webpack-env": "^1.16.2",
+        "@typescript-eslint/eslint-plugin": "^4.28.1",
+        "@typescript-eslint/parser": "^4.28.1",
+        "autoprefixer": "^10.2.6",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.2.6",
+        "eslint": "^7.30.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-webpack-plugin": "^2.5.4",
+        "html-webpack-plugin": "^5.3.2",
+        "postcss-loader": "^6.1.1",
+        "style-loader": "^3.0.0",
+        "typescript": "^4.3.5",
+        "webpack": "^5.42.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
-        "@polymer/app-layout": "3.1.0",
-        "@polymer/app-route": "3.0.2",
-        "@polymer/iron-ajax": "3.0.1",
-        "@polymer/iron-collapse": "3.0.1",
-        "@polymer/iron-flex-layout": "3.0.1",
-        "@polymer/iron-icon": "3.0.1",
-        "@polymer/iron-icons": "3.0.1",
-        "@polymer/iron-pages": "3.0.1",
-        "@polymer/paper-button": "3.0.1",
-        "@polymer/paper-dialog": "3.0.1",
-        "@polymer/paper-dropdown-menu": "3.2.0",
-        "@polymer/paper-fab": "3.0.1",
-        "@polymer/paper-icon-button": "3.0.2",
-        "@polymer/paper-input": "3.2.1",
-        "@polymer/paper-item": "3.0.1",
-        "@polymer/paper-listbox": "3.0.1",
-        "@polymer/paper-spinner": "3.0.2",
-        "@polymer/paper-styles": "3.0.1",
-        "@polymer/paper-toast": "3.0.1",
-        "@polymer/polymer": "3.4.1",
-        "@rwestlund/responsive-dialog": "3.0.2",
-        "@webcomponents/webcomponentsjs": "2.5.0",
-        "web-animations-js": "2.3.2"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     }
 }
