--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "eslint-webpack-plugin": "^2.5.4",
         "html-webpack-plugin": "^5.3.2",
         "postcss-loader": "^6.1.1",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0",
         "style-loader": "^3.0.0",
         "typescript": "^4.3.5",
         "webpack": "^5.42.0",
